Tue Jun 23 14:00:27 1998  Ian Lance Taylor  <ian@cygnus.com>

	* progs.am: Don't let $(EXEEXT) interfere with $(transform).
	Report from Mike Stump <mrs@wrs.com>.

Tue Jun  2 13:27:34 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_one_configure_file): Make CONFIGURE file
	handle local.

	* automake.in (read_am_file): Error if blank line or comment
	follows trailing backslash.  Test syntax.test.
	(file_contents_with_transform): Likewise.

Thu May 28 18:49:47 1998  Ian Lance Taylor  <ian@cygnus.com>

	* automake.in (handle_configure): Always use $(SHELL) when running
	config.status.

Mon Jun  1 14:23:29 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_yacc_lex_cxx): Use AM_CPPFLAGS, AM_CXXFLAGS,
	AM_CFLAGS.
	(output_yacc_build_rule): Use AM_YFLAGS, AM_LFLAGS.
	(handle_dependencies): Don't define CXXMKDEP.

	* clean.am (mostlyclean-generic): Prefix rule with MOSTLYCLEAN.
	(clean-generic): Prefix rule with CLEAN.
	(distclean-generic): Prefix rule with DISTCLEAN.
	(maintainer-clean-generic): Prefix rule with MAINTAINERCLEAN.
	BUILT_SOURCES now handled in automake itself.
	* automake.in (initialize_per_input): Initialize
	maintainer_clean_files.
	(handle_yacc_lex_cxx): Put lex and yacc output files onto
	@maintainer_clean_files.
	(handle_clean): Handle @maintainer_clean_files.  Transform
	clean.am when installing; try to remove unnecessary tests in
	generated code.

	* automake.in (do_check_merge_target): Only generate $(MAKE)
	command if there are check targets to make.  Report from Karl
	Heuer.

Sun May 17 23:05:55 1998  Tom Tromey  <tromey@cygnus.com>

	* aclocal.in (write_aclocal): Fixed generated copyright message.
	From Eleftherios Gkioulekas.

	* automake.in (parse_arguments): Typo fix from Paul D. Smith.

Fri May  8 12:14:03 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_yacc_lex_cxx): Put lex and yacc output files
	onto @clean.

Wed May  6 01:18:05 1998  Tom Tromey  <tromey@cygnus.com>
