@@ -53,9 +53,9 @@ maintainer-check: automake aclocal
 ## This check avoids accidental configure substitutions in the source.
 ## There are exactly 8 lines that should be modified.  This works out
 ## to 24 lines of diffs.
-	@if test `diff automake.in automake | wc -l` -ne 24; then \
+	@if test `diff $(srcdir)/automake.in automake | wc -l` -ne 24; then \
 	  echo "found too many diffs between automake.in and automake"; 1>&2; \
-	  diff -c automake.in automake; \
+	  diff -c $(srcdir)/automake.in automake; \
 	  exit 1; \
 	fi
 ## Syntax check with default Perl (on my machine, Perl 5).
