@@ -14,6 +14,11 @@
   ANSWER: for each dependency foo.h, make a dummy target `foo.h:'
   in the .P file.  Then the right thing ought to happen
 
+* If you suppress an internal variable by specifying a variable
+  in a Makefile.am, but the variable is conditional, then automake
+  should generate the internal variable conditionally.
+  You have to scan the map of all conditions and fill in the holes here
+
 * Every program foo has FOOFLAGS right now.
   It should also have AM_FOOFLAGS, which can be set in Makefile.am.
 DONE: but needs to be documented
