@@ -3068,6 +3068,7 @@ sub handle_configure
     {
 	&handle_aclocal_m4;
 	$output_rules .= &file_contents ('remake');
+	&examine_variable ('CONFIG_STATUS_DEPENDENCIES');
 	&examine_variable ('CONFIGURE_DEPENDENCIES');
 	$top_reldir = '';
     }
