@@ -17,7 +17,7 @@
 ## 02111-1307, USA.
 
 ## Explicitly look in srcdir for benefit of non-GNU makes.
-config.status: $(srcdir)/configure
+config.status: $(srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
 	$(SHELL) ./config.status --recheck
 ## Explicitly look in srcdir for benefit of non-GNU makes.
 $(srcdir)/configure: @MAINT@$(srcdir)/configure.in $(ACLOCAL_M4) $(CONFIGURE_DEPENDENCIES)
