@@ -1,3 +1,3 @@
-@set UPDATED 3 April 1998
+@set UPDATED 23 June 1998
 @set EDITION 1.3
 @set VERSION 1.3
