@@ -1,3 +1,14 @@
+Thu Jul 16 18:09:03 1998  Ian Lance Taylor  <ian@cygnus.com>
+
+	* remake.am (config.status): Depend upon
+	$(CONFIG_STATUS_DEPENDENCIES).
+	* automake.in (handle_configure): Examine
+	CONFIG_STATUS_DEPENDENCIES.
+
+Tue Jul 14 13:37:48 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* Makefile.am: Always look in srcdir for automake.in.
+
 Tue Jun 23 14:00:27 1998  Ian Lance Taylor  <ian@cygnus.com>
 
 	* progs.am: Don't let $(EXEEXT) interfere with $(transform).
